<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="150dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loadingPosition"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <Button
            android:id="@+id/settings"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/settings" />

        <Button
            android:id="@+id/exit"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/exit" />

    </LinearLayout>

</LinearLayout>